--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,9 @@
 storage:
   user: "postgres"
   password: "123"
-  dbname: "task"
+  host: "localhost"
+  port: "5432"
+  dbname: "user_points"
   sslmode: "disable"
 
 rest:
